--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,14 @@
-{}
+{
+    "semi": true,
+    "singleQuote": true,
+    
+    "overrides": [
+      {
+        "files": ".prettierrc",
+        "options": {
+          "parser": "json"
+        }
+      }
+    ]
+  }
+  
