--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "element-plus": "^2.2.29",
     "pinia": "^2.0.28",
+    "vant": "^4.0.10",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -32,6 +34,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
+    "unplugin-vue-components": "^0.23.0",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
