--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "element-plus": "^2.2.29",
     "pinia": "^2.0.28",
+    "postcss": "^8.4.21",
     "vant": "^4.0.10",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -28,10 +29,18 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
+    "cssnano": "^5.1.15",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
+    "postcss-aspect-ratio-mini": "^1.1.0",
+    "postcss-cssnext": "^3.1.1",
+    "postcss-import": "^15.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-url": "^10.1.3",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "unplugin-vue-components": "^0.23.0",
