init router store env vite config.....

--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
+    "dev": "vite --mode development",
+    "build": "run-p type-check build-only-prod",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
-    "build-only": "vite build",
+    "build-only-prod": "vite build --mode prod",
+    "build-only-sit": "vite build --mode sit",
+    "build-only-uat": "vite build --mode uat",
+    "build-only-development": "vite build --mode development",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "npx prettier . --write",
     "format:check": "npx prettier . --check"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "element-plus": "^2.2.32",
     "pinia": "^2.0.32",
     "postcss": "^8.4.21",
