--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,9 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "ignoreDeprecations": "5.0",
+    "importsNotUsedAsValues": "preserve"
+  }
 }
