--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3_pad",
+  "name": "tauri-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tauri-apps/cli": "^1.2.3",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^4.0.0",
