--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "npx prettier . --write",
     "format:check": "npx prettier . --check",
-    "tauri":"tauri dev"
+    "tauri": "tauri dev"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -50,6 +50,8 @@
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "prettier": "^2.8.4",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "typescript": "~4.9.5",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.4",
