--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "tauri": "tauri dev"
   },
   "dependencies": {
+    "@types/three": "^0.149.0",
     "axios": "^1.3.4",
     "element-plus": "^2.2.32",
     "pinia": "^2.0.32",
     "postcss": "^8.4.21",
+    "three": "^0.150.1",
     "vant": "^4.0.11",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
