--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tauri": "tauri dev"
   },
   "dependencies": {
+    "@animxyz/vue3": "^0.6.7",
     "@types/three": "^0.149.0",
     "axios": "^1.3.4",
     "element-plus": "^2.2.32",
