--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
+    "@tauri-apps/api": "^1.2.0",
     "@types/three": "^0.149.0",
     "axios": "^1.3.4",
     "element-plus": "^2.2.32",
