--- a/package.json
+++ b/package.json
@@ -22,29 +22,34 @@
     "@tauri-apps/api": "^1.2.0",
     "@types/three": "^0.149.0",
     "axios": "^1.3.4",
-    "element-plus": "^2.2.32",
-    "pinia": "^2.0.32",
+    "element-plus": "^2.3.0",
+    "pinia": "^2.0.33",
     "postcss": "^8.4.21",
     "three": "^0.150.1",
-    "vant": "^4.0.11",
+    "vant": "^4.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@codemirror/lang-javascript": "^6.1.4",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/theme-one-dark": "^6.1.1",
+    "codemirror": "^6.0.1",
+    "vue-codemirror": "^6.1.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.15.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.0",
+    "@vue/test-utils": "^2.3.1",
     "@vue/tsconfig": "^0.1.3",
     "cssnano": "^5.1.15",
-    "eslint": "^8.34.0",
+    "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
+    "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
     "postcss-aspect-ratio-mini": "^1.1.0",
     "postcss-cssnext": "^3.1.1",
@@ -54,12 +59,12 @@
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "prettier": "^2.8.4",
-    "sass": "^1.58.3",
+    "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
     "typescript": "~4.9.5",
-    "unplugin-vue-components": "^0.24.0",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
-    "vitest": "^0.28.5",
-    "vue-tsc": "^1.1.7"
+    "vitest": "^0.29.2",
+    "vue-tsc": "^1.2.0"
   }
 }
