--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "three": "^0.150.1",
     "vant": "^4.1.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "@kitware/vtk.js": "^26.9.0"
   },
   "devDependencies": {
     "@codemirror/lang-javascript": "^6.1.4",
