--- a/package.json
+++ b/package.json
@@ -19,24 +19,23 @@
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
+    "@kitware/vtk.js": "^26.9.0",
     "@tauri-apps/api": "^1.2.0",
     "@types/three": "^0.149.0",
     "axios": "^1.3.4",
     "element-plus": "^2.3.0",
+    "gsap": "^3.11.4",
     "pinia": "^2.0.33",
     "postcss": "^8.4.21",
     "three": "^0.150.1",
     "vant": "^4.1.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "@kitware/vtk.js": "^26.9.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@codemirror/lang-javascript": "^6.1.4",
     "@codemirror/lang-rust": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.1",
-    "codemirror": "^6.0.1",
-    "vue-codemirror": "^6.1.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jsdom": "^21.1.0",
@@ -47,6 +46,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.1",
     "@vue/tsconfig": "^0.1.3",
+    "codemirror": "^6.0.1",
     "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.9.0",
@@ -66,6 +66,7 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.2",
+    "vue-codemirror": "^6.1.1",
     "vue-tsc": "^1.2.0"
   }
 }
