--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.1",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.14",
     "codemirror": "^6.0.1",
     "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
@@ -62,6 +63,7 @@
     "prettier": "^2.8.4",
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "~4.9.5",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
