--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@animxyz/vue3": "^0.6.7",
     "@kitware/vtk.js": "^26.9.0",
     "@tauri-apps/api": "^1.2.0",
+    "@types/p5": "^1.5.0",
     "@types/three": "^0.149.0",
     "axios": "^1.3.4",
     "element-plus": "^2.3.0",
     "gsap": "^3.11.4",
+    "p5": "^1.6.0",
     "pinia": "^2.0.33",
     "postcss": "^8.4.21",
     "three": "^0.150.1",
