--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
-    "@kitware/vtk.js": "^26.9.0",
+    "@kitware/vtk.js": "^26.9.6",
     "@tauri-apps/api": "^1.2.0",
     "@types/p5": "^1.5.0",
     "@types/three": "^0.149.0",
     "axios": "^1.3.4",
-    "element-plus": "^2.3.0",
-    "gsap": "^3.11.4",
+    "element-plus": "^2.3.1",
+    "gsap": "^3.11.5",
     "p5": "^1.6.0",
     "pinia": "^2.0.33",
     "postcss": "^8.4.21",
     "three": "^0.150.1",
-    "vant": "^4.1.0",
+    "vant": "^4.1.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -41,19 +41,19 @@
     "@codemirror/theme-one-dark": "^6.1.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tauri-apps/cli": "^1.2.3",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.15.3",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.15.7",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.1",
+    "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
     "codemirror": "^6.0.1",
     "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
-    "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-vue": "^9.10.0",
     "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
     "postcss-aspect-ratio-mini": "^1.1.0",
@@ -63,14 +63,15 @@
     "postcss-url": "^10.1.3",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
-    "prettier": "^2.8.4",
-    "sass": "^1.59.2",
-    "sass-loader": "^13.2.0",
+    "prettier": "^2.8.7",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
     "tailwindcss": "^3.2.7",
-    "typescript": "~4.9.5",
+    "typescript": "~5.0.2",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.1.4",
-    "vitest": "^0.29.2",
+    "vite": "^4.2.1",
+    "vitest": "^0.29.7",
     "vue-codemirror": "^6.1.1",
     "vue-tsc": "^1.2.0"
   }
