--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -21,7 +21,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "noEmit": true,
-    "tsBuildInfoFile": ".tsbuildinfo",
+    "tsBuildInfoFile": ".tsbuildinfo"
     // "verbatimModuleSyntax": true
   }
 }
