--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,6 +35,15 @@ jobs:
       - name: Build VuePress site
         run: npm run build
 
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+
+      - name: build mdbook
+        run: cd ./docs && cargo install mdbook  && mdbook build
+
       - name: add status
         run: mv stats.html ./dist
 
