--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -56,6 +56,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
+    - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
     - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
