--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,9 +9,7 @@ on:
 
 jobs:
   docs:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
       with:
@@ -26,13 +24,17 @@ jobs:
         profile: minimal
         toolchain: stable
 
-    - name: 
-    
+    - name: setup mdbook
+      run: cd ./docs && cargo install mdbook
+    - name: Build Book
+      run: mdbook build
 
+    - name: move
+      run: mv ./book ../dist
     - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
-        with:
+      uses: crazy-max/ghaction-github-pages@v2
+      with:
           target_branch: docs
           build_dir: dist
-        env:
+      env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
