--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,8 +49,10 @@ jobs:
         uses: peaceiris/actions-mdbook@v1
         with:
           mdbook-version: '0.4.10'
+          mdbook-toc: '0.11.2'
+
       - name: Build Book
-        run: mdbook ./docs/build
+        run: mdbook build ./docs
   
       - name: move
         run: mv ./docs/book ./dist
