--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "format": "npx prettier . --write",
     "format:check": "npx prettier . --check",
     "tauri": "tauri dev",
-    "docs": "mdbook serve docs"
+    "docs": "mdbook serve docs",
+    "tauri:android init": "tauri android init",
+    "tauri:android dev": "tauri android dev"
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
     "@kitware/vtk.js": "^26.9.8",
-    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/api": "^2.0.0-alpha.2",
     "@types/p5": "^1.6.0",
     "@types/three": "^0.150.0",
     "axios": "^1.3.4",
@@ -40,7 +42,7 @@
     "@codemirror/lang-rust": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.1",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@tauri-apps/cli": "^1.2.3",
+    "@tauri-apps/cli": "^2.0.0-alpha.6",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
@@ -54,6 +56,7 @@
     "cssnano": "^6.0.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.10.0",
+    "internal-ip": "^7.0.0",
     "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
     "postcss-aspect-ratio-mini": "^1.1.0",
