Submit: try a release gitaction

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,7 @@ jobs:
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v1
         with:
-          mdbook-version: '0.4.10'
-          mdbook-toc: '0.11.2'
+          mdbook-version: "latest"
 
       - name: Build Book
         run: mdbook build ./docs
