--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+#喵喵喵
 name : Build and Release
 
 on:
@@ -78,7 +79,7 @@ jobs:
           with:
             upload_url: ${{ steps.create_release.outputs.upload_url }}
             asset_path: ./dist.zip
-            asset_name: js-screen-shot-dist.zip
+            asset_name: www.zip
             asset_content_type: application/zip
 
         - name: Deploy to GitHub Pages
