add asciinema-player/set chunkSizeWarningLimit to 1000 such a lazy boy

--- a/docs/src/.obsidian/appearance.json
+++ b/docs/src/.obsidian/appearance.json
@@ -1,3 +1,7 @@
 {
-  "accentColor": ""
+  "accentColor": "#1a065b",
+  "theme": "system",
+  "cssTheme": "Minimal",
+  "interfaceFontFamily": "Inter",
+  "translucency": true
 }
