--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
+    "asciinema-player": "^3.2.0",
     "autoprefixer": "^10.4.14",
     "codemirror": "^6.0.1",
     "cssnano": "^6.0.0",
