--- a/docs/src/.obsidian/appearance.json
+++ b/docs/src/.obsidian/appearance.json
@@ -1,7 +1,7 @@
 {
   "accentColor": "#1a065b",
   "theme": "system",
-  "cssTheme": "Minimal",
+  "cssTheme": "Ono Sendai",
   "interfaceFontFamily": "Inter",
   "translucency": true
 }
