--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ml5": "^0.12.2",
     "p5": "^1.6.0",
     "pinia": "^2.0.33",
+    "svgcanvas": "^2.5.0",
     "three": "^0.150.1",
     "vant": "^4.1.2",
     "vue": "^3.2.47",
