--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "npx prettier . --write",
     "format:check": "npx prettier . --check",
     "docs": "mdbook serve docs",
-    "tauri": "tauri dev"
+    "tauri": "tauri dev",
+    "test:e2e": "npx cypress open"
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
@@ -55,6 +56,7 @@
     "autoprefixer": "^10.4.14",
     "codemirror": "^6.0.1",
     "cssnano": "^6.0.0",
+    "cypress": "^12.9.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.10.0",
     "internal-ip": "^7.0.0",
