--- a/docs/src/.obsidian/app.json
+++ b/docs/src/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "promptDelete": false,
   "alwaysUpdateLinks": true,
-  "vimMode": true
+  "vimMode": false,
+  "attachmentFolderPath": "sources"
 }
