--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "element-plus": "^2.3.1",
     "gsap": "^3.11.5",
     "ml5": "^0.12.2",
+    "nprogress": "^0.2.0",
     "p5": "^1.6.0",
     "pinia": "^2.0.33",
     "svgcanvas": "^2.5.0",
