--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nprogress": "^0.2.0",
     "p5": "^1.6.0",
     "pinia": "^2.0.33",
+    "socket.io-client": "^4.6.1",
     "svgcanvas": "^2.5.0",
     "three": "^0.150.1",
     "vant": "^4.1.2",
