--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only-prod": "vite build --mode prod",
+    "build-only-prod:netlify": "vite build --mode netlify",
     "build-only-sit": "vite build --mode sit",
     "build-only-uat": "vite build --mode uat",
     "build-only-development": "vite build --mode development",
@@ -17,7 +18,8 @@
     "format:check": "npx prettier . --check",
     "docs": "mdbook serve docs",
     "tauri": "tauri dev",
-    "test:e2e": "npx cypress open"
+    "test:e2e": "npx cypress open",
+    "socket-server": "npm run -C server/socket-chat dev"
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
@@ -84,5 +86,8 @@
     "vitest": "^0.29.8",
     "vue-codemirror": "^6.1.1",
     "vue-tsc": "^1.2.0"
-  }
+  },
+  "workspaces": [
+    "server/socket-chat"
+  ]
 }
