--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/p5": "^1.6.0",
     "@types/three": "^0.150.0",
     "axios": "^1.3.4",
+    "cornerstone-core": "^2.6.1",
     "element-plus": "^2.3.1",
     "gsap": "^3.11.5",
     "ml5": "^0.12.2",
