--- a/package.json
+++ b/package.json
@@ -24,52 +24,53 @@
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
-    "@kitware/vtk.js": "^26.9.8",
-    "@photo-sphere-viewer/core": "^5.1.4",
-    "@splinetool/loader": "^0.9.298",
+    "@kitware/vtk.js": "^27.4.0",
+    "@photo-sphere-viewer/core": "^5.1.5",
+    "@splinetool/loader": "^0.9.311",
     "@tauri-apps/api": "^2.0.0-alpha.2",
-    "@types/p5": "^1.6.0",
-    "@types/three": "^0.150.0",
-    "axios": "^1.3.4",
+    "@types/p5": "^1.6.1",
+    "@types/three": "^0.150.2",
+    "axios": "^1.4.0",
     "cornerstone-core": "^2.6.1",
-    "element-plus": "^2.3.1",
+    "element-plus": "^2.3.4",
     "gsap": "^3.11.5",
     "ml5": "^0.12.2",
     "nprogress": "^0.2.0",
     "p5": "^1.6.0",
-    "pinia": "^2.0.33",
+    "pinia": "^2.0.35",
     "socket.io-client": "^4.6.1",
     "svgcanvas": "^2.5.0",
-    "three": "^0.150.1",
-    "vant": "^4.1.2",
+    "three": "^0.152.0",
+    "vant": "^4.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@codemirror/lang-javascript": "^6.1.4",
+    "@codemirror/lang-javascript": "^6.1.7",
     "@codemirror/lang-rust": "^6.0.1",
-    "@codemirror/theme-one-dark": "^6.1.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tauri-apps/cli": "^2.0.0-alpha.6",
+    "@tsconfig/node18": "^2.0.0",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.15.11",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@types/node": "^18.16.2",
+    "@vitejs/plugin-vue": "^4.2.1",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.1.3",
-    "asciinema-player": "^3.2.0",
+    "@vue/tsconfig": "^0.3.2",
+    "asciinema-player": "^3.3.0",
     "autoprefixer": "^10.4.14",
     "codemirror": "^6.0.1",
     "cssnano": "^6.0.0",
-    "cypress": "^12.9.0",
-    "eslint": "^8.37.0",
-    "eslint-plugin-vue": "^9.10.0",
+    "cypress": "^12.11.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "internal-ip": "^7.0.0",
     "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "postcss-aspect-ratio-mini": "^1.1.0",
     "postcss-cssnext": "^3.1.1",
     "postcss-import": "^15.1.0",
@@ -77,17 +78,17 @@
     "postcss-url": "^10.1.3",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "rollup-plugin-visualizer": "^5.9.0",
-    "sass": "^1.60.0",
+    "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
-    "tailwindcss": "^3.3.1",
-    "typescript": "~5.0.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "~5.0.4",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.2.1",
-    "vitest": "^0.29.8",
+    "vite": "^4.3.3",
+    "vitest": "^0.30.1",
     "vue-codemirror": "^6.1.1",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.6.1"
   },
   "workspaces": [
     "server/socket-chat"
