--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/three": "^0.150.2",
     "axios": "^1.4.0",
     "cornerstone-core": "^2.6.1",
-    "element-plus": "^2.3.4",
+    "element-plus": "^2.3.1",
     "gsap": "^3.11.5",
     "ml5": "^0.12.2",
     "nprogress": "^0.2.0",
@@ -51,6 +51,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tauri-apps/cli": "^2.0.0-alpha.6",
+    "@tsconfig/node16": "^1.0.3",
     "@tsconfig/node18": "^2.0.0",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.2",
@@ -59,7 +60,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.3.2",
+    "@vue/tsconfig": "^0.1.3",
     "asciinema-player": "^3.3.0",
     "autoprefixer": "^10.4.14",
     "codemirror": "^6.0.1",
