--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,13 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
+  //   "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "config/**/*"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
     "ignoreDeprecations": "5.0",
+    "lib": ["ES2016", "DOM", "DOM.Iterable"],
     "paths": {
       "@/*": ["./src/*"]
     }
