--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": ["@tsconfig/node16/tsconfig.json", "@vue/tsconfig/tsconfig.json"],
   "include": [
     "vite.config.*",
     "vitest.config.*",
@@ -23,6 +23,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "noEmit": true,
+    "importHelpers": true,
     "tsBuildInfoFile": ".tsbuildinfo"
     // "verbatimModuleSyntax": true
   }
