--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -3,7 +3,7 @@
   "exclude": [],
   "compilerOptions": {
     "composite": true,
-    "lib": [],
+    "lib": ["ES2016", "DOM", "DOM.Iterable"],
     "types": ["node", "jsdom"],
     "ignoreDeprecations": "5.0"
   }
