--- a/templates/mini-reactive/package.json
+++ b/templates/mini-reactive/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "4.4": "node 4.4.js"
+    "4.4": "node 4.4.js",
+    "4.4.e": "node 4.4.e.js"
   },
   "author": "ajn404",
   "license": "ISC"
