--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,104 +5,61 @@ on:
   push:
     tags:
       - 'v*'
-
 jobs:
-  build-release:
-    runs-on: ubuntu-latest
+  publish-tauri:
+    permissions:
+      contents: write
+    strategy:
+      fail-fast: false
+      matrix:
+        settings:
+          - platform: 'macos-latest'
+            args: '--target x86_64-apple-darwin' # Intel-based
+          - platform: 'macos-latest'
+            args: '--target aarch64-apple-darwin' # Apple Silicon
+          - platform: 'ubuntu-20.04'
+            args: ''
+          - platform: 'windows-latest'
+            args: '--target x86_64-pc-windows-msvc' # 64-bit
+          - platform: 'windows-latest'
+            args: '--target i686-pc-windows-msvc' # 32-bit
 
+    runs-on: ${{ matrix.settings.platform }}
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: aarch64-apple-darwin
+
+      # - name: Rust cache
+      #   uses: swatinem/rust-cache@v2
+      #   with:
+      #     workspaces: './src-tauri -> target'
+
+      - name: Sync node version and setup cache
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
 
-      # - name: Cache dependencies
-      #   uses: actions/cache@v2
-      #   id: yarn-cache
-      #   with:
-      #     path: |
-      #       **/node_modules
-      #     key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-yarn-
+      - name: install dependencies (ubuntu only)
+        if: matrix.settings.platform == 'ubuntu-20.04'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
 
-      - name: Install dependencies
-        run: npm i
+      - name: install frontend dependencies
+        run: npm install # change this to npm or pnpm depending on which one you use
 
-      - name: Build site
-        run: npm run build
-
-      - name: add status.html
-        run: mv stats.html ./dist
-
-      - name: Install Rust and build dependencies
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-
-      - name: Setup mdBook
-        uses: peaceiris/actions-mdbook@v1
-        with:
-          mdbook-version: 'latest'
-
-      - name: Build Book
-        run: mdbook build ./docs
-
-      - name: move
-        run: mv ./docs/book ./dist
-
-      # 将dist目录打成zip包
-      - name: Zip Dist
-        run: zip -r dist.zip dist
-
-      # 创建Release
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - uses: tauri-apps/tauri-action@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
+          tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
+          releaseName: 'Pointless v__VERSION__'
+          releaseBody: 'See the assets to download this version and install.'
+          releaseDraft: false
           prerelease: false
-      # 上传zip包
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist.zip
-          asset_name: www.zip
-          asset_content_type: application/zip
-
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
-        with:
-          target_branch: docs
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  create-changelog:
-    runs-on:
-      ubuntu-latest
-      # 需要等build结束后才执行此处
-    needs: build-release
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          # 生成版本更新日志
-      - run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          args: ${{ matrix.settings.args }}
