--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "npx prettier . --write",
     "format:check": "npx prettier . --check",
     "docs": "mdbook serve docs",
-    "tauri": "tauri dev",
+    "tauri:dev": "tauri dev",
     "tauri:build": "tauri build",
     "test:e2e": "npx cypress open",
     "socket-server": "npm run -C server/socket-chat dev"
