--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
           releaseName: 'Pointless v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
+          releaseBody: 'release下载对应版本'
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.settings.args }}
