--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,10 @@ jobs:
             args: '--target x86_64-apple-darwin' # Intel-based
           - platform: 'macos-latest'
             args: '--target aarch64-apple-darwin' # Apple Silicon
-          - platform: 'ubuntu-20.04'
-            args: ''
-          - platform: 'windows-latest'
-            args: '--target x86_64-pc-windows-msvc' # 64-bit
+          #   - platform: 'ubuntu-20.04'
+          #     args: ''
+          #   - platform: 'windows-latest'
+          #     args: '--target x86_64-pc-windows-msvc' # 64-bit
           - platform: 'windows-latest'
             args: '--target i686-pc-windows-msvc' # 32-bit
 
